SERVER-76365 Introduce option for mongotmock to have unused responses

GitOrigin-RevId: 404419c0c5d364b3010545db83d0f7e5bf88db48